Fixed graphical bug where border-radius of background was bleeding onto project-header

--- a/_sass/project.scss
+++ b/_sass/project.scss
@@ -32,7 +32,7 @@
 	.project-header {
 		padding: 10px 20px;
 
-		border-radius: 10px 10px 0 0;
+		border-radius: 8px 8px 0 0;
 		width: 100%;
 
 		background-color: $contrast-color;
